Checkpoint 1 - Improved UI with one working API

--- a/data/translation/en.json
+++ b/data/translation/en.json
@@ -1,6 +1,6 @@
 {
-  "groceriesTitle": "Helping you live to your fullest",
-  "groceriesSubTitle": "Get your healthy foods & snacks delivered at your doorsteps all day everyday",
+  "groceriesTitle": "Know More. Live Healthier.",
+  "groceriesSubTitle": "Your guide to everyday health and well being.",
   "makeupTitle": "Branded & imported makeups",
   "makeupSubTitle": "Easiest and cheapest way to get your branded & imported makeups",
   "bagsTitle": "Exclusive Branded bags",
@@ -14,7 +14,7 @@
   "booksTitle": "Your own books store",
   "booksSubTitle": "Get your favourite books from our wide range of books.",
 
-  "searchPlaceholder": "Search for any wellness topic",
+  "searchPlaceholder": "How can we help?",
   "searchButtonText": "Search",
   "navlinkOffer": "Offer",
   "navlinkHelp": "Need Help",
