PROD 1.12 New video layout and bookmark feature

--- a/data/translation/en.json
+++ b/data/translation/en.json
@@ -46,7 +46,7 @@
   "paymentCardTitle": "Payments Card",
   "addCardBtn": "Add Card",
   "savedCardsId": "Saved Cards",
-  "siteFooter": "Pickbazar is a product by",
+  "siteFooter": "Urban Nuskha is a product by",
   "subTotal": "Sub Total",
   "itemsText": "items",
   "shippinFeeText": "Shipping Fee",
@@ -85,11 +85,11 @@
   "signUpBtnText": "Sign Up",
   "forgotPasswordText": "Forgot your password?",
   "resetText": "Reset It",
-  "signUpText": "By signing up, you agree to Pickbazar's",
+  "signUpText": "Login with Urban Nuskha to enjoy all the features.",
   "termsConditionText": "Terms & Condtion",
   "alreadyHaveAccount": "Already have an account?",
   "backToSign": "Back to",
-  "loginBtnText": "Login",
+  "loginBtnText": "Sign In",
   "forgotPassText": "Forgot Password",
   "sendResetPassText": "We'll send you a link to reset your password",
   "resetPasswordBtn": "Reset Password",
